--- a/Grant-Mgmt-index.html
+++ b/Grant-Mgmt-index.html
@@ -85,7 +85,7 @@
             Grant Management System
           </h1>
           <p class="leading-normal text-1xl mb-8">
-            Guides non-profit on the right course of action to inspire commitment to a cause, cultivate donor relationships, and gives you the tools to perform these actions efficiently. 
+            Guides non-profit on the right course of action to inspire commitment to a cause, cultivate relationships with funders, and gives you the tools to perform these actions efficiently. 
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Sign Up
@@ -568,7 +568,7 @@
               </h3>
               <p class="text-gray-600 mb-8">
                 Saw a funder in the news? Update the funder's profile conveniently, add a note on what you found, send a congratulatory message or assign a colleague to follow-up.
-                Meeting with a donor? Look through last-minute research to remind you of their personal details. <br> </br>
+                Meeting with a funder? Look through last-minute research to remind you of their personal details. <br> </br>
                 Built-in speech recognition software to dictate the notes as the meeting goes, so you can focus on the conversation.
                 After the meeting, capture the info while it is fresh in your mind. 
                 <br />
@@ -633,7 +633,7 @@
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
-                - Highlight the top <b>10</b> new funders / donors to call <br>
+                - Highlight the top <b>10</b> new funders to call <br>
                   (for each country representative / market directors)<br> </br>
                 - Surface <b>10</b> existing funders with the least engagement (with renewal due in 3 months) and reach out proactively on how to value-add to their philanthropy goals <br> </br>
                 - Summary of the funder's past giving to the non-profit <br> </br>
