--- a/Grant-Mgmt-index.html
+++ b/Grant-Mgmt-index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      IMPACT FORGE - Grant Management System Brochure 01
+      IMPACT FORGE - Donor Management System Brochure 01
     </title>
-    <meta name="description" content="NPO-fund-seeker-Grant-Management-System " />
+    <meta name="description" content="NPO-fund-seeker-Donor-Management-System " />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <!--Use Tailwind CSS template as downloaded -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
-    <!-- AVPN IF - Grant Management System BRANDING STYLE is undefined. Color Gradient as received online -->
+    <!-- AVPN IF - Donor Management System BRANDING STYLE is undefined. Color Gradient as received online -->
     <style>
       .gradient {
         background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
@@ -75,14 +75,14 @@
       </div>
       <hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
     </nav>
-    <!--Grant-Management-System-->
+    <!--Donor-Management-System-->
     <div class="pt-24">
       <div class="container px-12 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="uppercase tracking-loose w-full">AVPN Digital Transformation Team</p>
           <h1 class="my-4 text-5xl font-bold leading-tight\">
-            Grant Management System
+            Donor Management System
           </h1>
           <p class="leading-normal text-1xl mb-8">
             Guides non-profit on the right course of action to inspire commitment to a cause, cultivate relationships with funders, and gives you the tools to perform these actions efficiently. 
@@ -460,9 +460,9 @@
             </h3>
             <p class="text-gray-600 mb-8">
               2-way interactions with regular funders will significantly increase retention. 
-              The grant management system enables users to surveys to funders and measure satisfaction, commitment and trust towards the non-profit, without additional software. 
+              The donor management system enables users to surveys to funders and measure satisfaction, commitment and trust towards the non-profit, without additional software. 
               <br> <br/>
-               The grant management software also integrates with WhatsApp Business messaging for the non-profit to build on organic conversations with funders. 
+               The donor management software also integrates with WhatsApp Business messaging for the non-profit to build on organic conversations with funders. 
               <br />
               <br />
 
@@ -601,17 +601,13 @@
                     <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                1.Interactive Dashboard
+                1.Best Practices
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
-                - Review retention rate and suggestions for improvements <br> </br>
-                - Track multiple sources of revenue and payment tranches for non-profit <br> </br>
-                - Quick look at incoming memberships fees and donations <br> </br>
-                - 'At a glance' on partnerships engagements and delivery <br> </br>
-                - Access reports and accounts <br> </br>
-                - Build 'to-do' lists and timely reminders (2 weeks advance notice) prior to reporting deadlines <br>
-              </p>
+                - Gleaned from AVPN's 10-years experiences in impact investments <br> </br>
+                - Funders' perspectives to build relationships for collaborative impact <br> </br>
+                </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
@@ -629,7 +625,7 @@
                 <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                2. Funders' Summary and Engagement Levels
+                2. Summary of Funder's Engagement Levels
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
@@ -693,12 +689,19 @@
                     <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                4. Reports
+                4. Interactive Dashboard
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
+                - Review retention rate and suggestions for improvements <br> </br>
+                - Track multiple sources of revenue and payment tranches for non-profit <br> </br>
+                - Quick look at incoming memberships fees and donations <br> </br>
+                - 'At a glance' on partnerships engagements and delivery <br> </br>
+                - Access reports and accounts <br> </br>
+                - Build 'to-do' lists and timely reminders (2 weeks advance notice) prior to reporting deadlines <br>
                 - Create meaningful and comprehensive reports for your colleagues<br> </br>
                 - Highlight key information necessary for presentations, fund management outcomes, marketing, fundraising and annual planning <br> </br>
+
               </p>
             </a>
           </div>
@@ -722,8 +725,7 @@
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
                 - 'View-only' access for funders and Board Members to download high-level reports <br> </br>
-                - Optional: Integration with AVPN's DealShare Platform <br></br>
-                - Optional: Data Sharing, Benchmark with other charities <br></br>
+                - Tracking of delivery progress and non profit's reporting milestones </br>
              </p>
             </a>
           </div>
@@ -743,13 +745,15 @@
                 <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                6. Social Listening
+                6. Future Deployment
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
-                - Connect for social media monitoring <br></br>
-                - Combing through Instagram, Linkedin Posts and the funder's local market news channels <br> </br>
-                - if your funder is in the news for good reasons, you can send a congratulatory message over promptly <br>
+                - Optional: Integration with AVPN's DealShare Platform <br></br>
+                - Optional: Data Sharing, Benchmark with other charities <br></br>
+                - Social Listening: combing through Instagram, Linkedin Posts and the funder's local market news channels <br></br>
+                - if your funder is in the news for good reasons, you can send a congratulatory message over promptly <br> </br>
+                -  <br>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
@@ -770,7 +774,7 @@
           Pricing
         </h1>
         <p class="w-full my-2 leading-normal text-center text-1xl mb-8">
-          The Grant Management System is priced according to the organisation's usage volume, based on the number of contacts and funders tracked. <br>
+          The Donor Management System is priced according to the organisation's usage volume, based on the number of contacts and funders tracked. <br>
           All prices stated in USD.
         </p>
         <div class="w-full mb-4">
@@ -786,7 +790,7 @@
                 <li class="border-b py-4">Full functionality</li>
                 <li class="border-b py-4">Unlimited users</li>
                 <li class="border-b py-4">Free email support</li>
-                <li class="border-b py-4">Free Access to Grant-Management Academy <br> (for useful tips on fund raising for NPOs)</li>
+                <li class="border-b py-4">Free Access to AVPN Academy <br> (for useful tips on fund raising for NPOs)</li>
                 <li class="border-b py-4">Unlimited online pages / forms</li>
                 <li class="border-b py-4">5,000 emails / months</li>
                 <li class="border-b py-4">10G file attachment storage </li>
@@ -813,7 +817,7 @@
                 <li class="border-b py-4">Full functionality</li>
                 <li class="border-b py-4">Unlimited users</li>
                 <li class="border-b py-4">Free email support</li>
-                <li class="border-b py-4">Free Access to Grant-Management Academy <br> (for useful tips on fund raising for NPOs)</li>
+                <li class="border-b py-4">Free Access to AVPN Academy <br> (for useful tips on fund raising for NPOs)</li>
                 <li class="border-b py-4">Unlimited online pages / forms</li>
                 <li class="border-b py-4">10,000 emails / months</li>
                 <li class="border-b py-4">20G file attachment storage </li>
@@ -841,7 +845,7 @@
                 <li class="border-b py-4">Full functionality</li>
                 <li class="border-b py-4">Unlimited users</li>
                 <li class="border-b py-4">Free email support</li>
-                <li class="border-b py-4">Free Access to Grant-Management Academy <br> (for useful tips on fund raising for NPOs)</li>
+                <li class="border-b py-4">Free Access to AVPN Academy <br> (for useful tips on fund raising for NPOs)</li>
                 <li class="border-b py-4">Unlimited online pages / forms</li>
                 <li class="border-b py-4">15,000 emails / months</li>
                 <li class="border-b py-4">30G file attachment storage </li>
