--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
-                - Gleaned from AVPN's 10-years experiences in impact investments <br> </br>
-                - Funders' perspectives to build relationships for collaborative impact <br> </br>
+                - Glean from AVPN's 10-years experiences in impact investments <br> </br>
+                - Access AVPN Academy for knowledge sharing on how to build strong relationships with donors <br> </br>
                 </p>
             </a>
           </div>
@@ -697,9 +697,7 @@
                 - Track multiple sources of revenue and payment tranches for non-profit <br> </br>
                 - Quick look at incoming memberships fees and donations <br> </br>
                 - 'At a glance' on partnerships engagements and delivery <br> </br>
-                - Access reports and accounts <br> </br>
                 - Build 'to-do' lists and timely reminders (2 weeks advance notice) prior to reporting deadlines <br>
-                - Create meaningful and comprehensive reports for your colleagues<br> </br>
                 - Highlight key information necessary for presentations, fund management outcomes, marketing, fundraising and annual planning <br> </br>
 
               </p>
@@ -725,7 +723,7 @@
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
                 - 'View-only' access for funders and Board Members to download high-level reports <br> </br>
-                - Tracking of delivery progress and non profit's reporting milestones </br>
+                - Track project progress and non profit's reporting milestones </br>
              </p>
             </a>
           </div>
