--- a/index.html
+++ b/index.html
@@ -747,9 +747,9 @@
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
-                - Optional: Integration with AVPN's DealShare Platform <br></br>
-                - Optional: Data Sharing, Benchmark with other charities <br></br>
-                - Social Listening: combing through Instagram, Linkedin Posts and the funder's local market news channels <br></br>
+                - Integration with AVPN's DealShare Platform <br></br>
+                - Data Sharing, Benchmark with other charities (subject to other charities' willingness to share) <br></br>
+                - Social Listening by combing through Instagram, Linkedin Posts and the funder's local market news channels <br></br>
                 - if your funder is in the news for good reasons, you can send a congratulatory message over promptly <br> </br>
                 -  <br>
             </a>
