--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
                 - Glean from AVPN's 10-years experiences in impact investments <br> </br>
-                - Access AVPN Academy for knowledge sharing on how to build strong relationships with donors <br> </br>
+                - Access AVPN Academy for practical handles to build strong relationships with donors <br> </br>
                 </p>
             </a>
           </div>
@@ -697,8 +697,8 @@
                 - Track multiple sources of revenue and payment tranches for non-profit <br> </br>
                 - Quick look at incoming memberships fees and donations <br> </br>
                 - 'At a glance' on partnerships engagements and delivery <br> </br>
-                - Build 'to-do' lists and timely reminders (2 weeks advance notice) prior to reporting deadlines <br>
-                - Highlight key information necessary for presentations, fund management outcomes, marketing, fundraising and annual planning <br> </br>
+                - Build 'to-do' lists and timely reminders (2 weeks advance notice) prior to reporting deadlines <br> </br>
+                - Highlight key information necessary for presentations, fund management outcomes, marketing, fundraising and annual planning <br> 
 
               </p>
             </a>
