--- a/index.html
+++ b/index.html
@@ -606,6 +606,7 @@
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
                 - Glean from AVPN's 10-years experiences in impact investments <br> </br>
+                - Be guided on how to build an impact reporting system <br> </br>
                 - Access AVPN Academy for practical handles to build strong relationships with donors <br> </br>
                 </p>
             </a>
@@ -782,7 +783,7 @@
           <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
             <div class="flex-1 bg-white text-gray-600 rounded-t rounded-b-none overflow-hidden shadow">
               <div class="p-8 text-3xl font-bold text-center border-b-4">
-                0-500 records
+                0-200 records
               </div>
               <ul class="w-full text-center text-sm">
                 <li class="border-b py-4">Full functionality</li>
@@ -792,12 +793,12 @@
                 <li class="border-b py-4">Unlimited online pages / forms</li>
                 <li class="border-b py-4">5,000 emails / months</li>
                 <li class="border-b py-4">10G file attachment storage </li>
-                <li class="border-b py-4">Optional <b>$50</b>/month telephone support</li>
+                <li class="border-b py-4">Optional <b>$30</b>/month telephone support</li>
              </ul>
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
               <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
-                $99
+                $50
                 <span class="text-base">per month</span>
               </div>
               <div class="flex items-center justify-center">
@@ -809,7 +810,7 @@
           </div>
           <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
             <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-              <div class="w-full p-8 text-3xl font-bold text-center">501-1000 records</div>
+              <div class="w-full p-8 text-3xl font-bold text-center">201-500 records</div>
               <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
               <ul class="w-full text-center text-base font-normal">
                 <li class="border-b py-4">Full functionality</li>
@@ -824,7 +825,7 @@
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
               <div class="w-full pt-6 text-4xl font-bold text-center">
-                $199
+                $99
                 <span class="text-base">/ per month</span>
               </div>
               <div class="flex items-center justify-center">
@@ -837,7 +838,7 @@
           <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
             <div class="flex-1 bg-white text-gray-600 rounded-t rounded-b-none overflow-hidden shadow">
               <div class="p-8 text-3xl font-bold text-center border-b-4">
-                1001-1500 records
+                501-1000 records
               </div>
               <ul class="w-full text-center text-sm">
                 <li class="border-b py-4">Full functionality</li>
@@ -847,12 +848,12 @@
                 <li class="border-b py-4">Unlimited online pages / forms</li>
                 <li class="border-b py-4">15,000 emails / months</li>
                 <li class="border-b py-4">30G file attachment storage </li>
-                <li class="border-b py-4">Optional <b>$70</b>/month telephone support</li>
+                <li class="border-b py-4">Optional <b>$120</b>/month telephone support</li>
               </ul>
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
               <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
-                $299
+                $199
                 <span class="text-base">/ per month</span>
               </div>
               <div class="flex items-center justify-center">
