--- a/index.html
+++ b/index.html
@@ -606,14 +606,15 @@
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
                 - Glean from AVPN's 10-years experiences in impact investments <br> </br>
-                - Be guided on how to build an impact reporting system <br> </br>
+                - Guides you on how to build an impact reporting system <br> </br>
                 - Access AVPN Academy for practical handles to build strong relationships with donors <br> </br>
                 </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                Vote
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -644,6 +645,7 @@
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
               <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                Vote
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
