--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
                 - Glean from AVPN's 10-years experiences in impact investments <br> </br>
-                - Guides you on how to build an impact reporting system <br> </br>
+                - Receive guidance on how to build an impact reporting system <br> </br>
                 - Access AVPN Academy for practical handles to build strong relationships with donors <br> </br>
                 </p>
             </a>
