--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 Vote
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
@@ -674,7 +674,8 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                Vote
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -708,7 +709,8 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                Vote
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -732,7 +734,8 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                Vote
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -759,7 +762,8 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                Vote
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
