--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      IMPACT FORGE - Cybersecurity 01 Landing Page
+      Cybersecurity 01 Landing Page
     </title>
     <meta name="description" content="SME-NPO-Cybersecurity-Service " />
     <meta name="keywords" content="" />
@@ -28,7 +28,7 @@
         <div class="pl-4 flex items-center">
           <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
             <!--Icon from: for IMPACT FORGE LOGO make sure it is hosted on the same directory OR SVG and convert into VECTOR PATHS-->
-            <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005">
+            <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 412.005 412.005">
               <rect fill="    " x="    " y="    " width="    " height="   " transform="matrix(1,0,0,1,0,0)" />
               <!--original file for the line above
                   rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502" transform="matrix(1,0,0,1,0,0)"  -->
