--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Donor-Management-System-01-Draft -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      IMPACT FORGE - Donor Management System Brochure 01
+      Donor Management System Brochure 01
     </title>
     <meta name="description" content="NPO-fund-seeker-Donor-Management-System " />
     <meta name="keywords" content="" />
@@ -606,15 +607,13 @@
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
                 - Glean from AVPN's 10-years experiences in impact investments <br> </br>
-                - Receive guidance on how to build an impact reporting system <br> </br>
                 - Access AVPN Academy for practical handles to build strong relationships with donors <br> </br>
                 </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Vote
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -644,8 +643,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Vote
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -674,8 +672,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Vote
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -709,8 +706,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Vote
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -734,8 +730,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Vote
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -762,8 +757,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Vote
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
               </button>
             </div>
@@ -789,7 +783,7 @@
           <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
             <div class="flex-1 bg-white text-gray-600 rounded-t rounded-b-none overflow-hidden shadow">
               <div class="p-8 text-3xl font-bold text-center border-b-4">
-                0-200 records
+                0-500 records
               </div>
               <ul class="w-full text-center text-sm">
                 <li class="border-b py-4">Full functionality</li>
@@ -799,12 +793,12 @@
                 <li class="border-b py-4">Unlimited online pages / forms</li>
                 <li class="border-b py-4">5,000 emails / months</li>
                 <li class="border-b py-4">10G file attachment storage </li>
-                <li class="border-b py-4">Optional <b>$30</b>/month telephone support</li>
+                <li class="border-b py-4">Optional <b>$50</b>/month telephone support</li>
              </ul>
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
               <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
-                $50
+                $99
                 <span class="text-base">per month</span>
               </div>
               <div class="flex items-center justify-center">
@@ -816,7 +810,7 @@
           </div>
           <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
             <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-              <div class="w-full p-8 text-3xl font-bold text-center">201-500 records</div>
+              <div class="w-full p-8 text-3xl font-bold text-center">501-1000 records</div>
               <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
               <ul class="w-full text-center text-base font-normal">
                 <li class="border-b py-4">Full functionality</li>
@@ -831,7 +825,7 @@
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
               <div class="w-full pt-6 text-4xl font-bold text-center">
-                $99
+                $199
                 <span class="text-base">/ per month</span>
               </div>
               <div class="flex items-center justify-center">
@@ -844,7 +838,7 @@
           <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
             <div class="flex-1 bg-white text-gray-600 rounded-t rounded-b-none overflow-hidden shadow">
               <div class="p-8 text-3xl font-bold text-center border-b-4">
-                501-1000 records
+                1001-1500 records
               </div>
               <ul class="w-full text-center text-sm">
                 <li class="border-b py-4">Full functionality</li>
@@ -854,12 +848,12 @@
                 <li class="border-b py-4">Unlimited online pages / forms</li>
                 <li class="border-b py-4">15,000 emails / months</li>
                 <li class="border-b py-4">30G file attachment storage </li>
-                <li class="border-b py-4">Optional <b>$120</b>/month telephone support</li>
+                <li class="border-b py-4">Optional <b>$70</b>/month telephone support</li>
               </ul>
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
               <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
-                $199
+                $299
                 <span class="text-base">/ per month</span>
               </div>
               <div class="flex items-center justify-center">
