--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -93,7 +93,7 @@
           </button>
         </div>
         <!--Right Col-->
-        <div class="w-full md:w-3/5 py-6 text-center">
+        <div class="w-full md:w-2/5 py-6 text-center">
 
           <!--FIRST IMAGE SVG BELOW-->
           <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" width="751.13137" height="669.03005" viewBox="0 0 751.13137 669.03005" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -183,17 +183,7 @@
       </svg>
     </div>
 
-    <!--Core Features-->
-    <section class="bg-white border-b py-8">
-      <div class="container max-w-5xl mx-auto m-8">
-        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          Core Features
-        </h1>
-        <div class="w-full mb-4">
-          <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
-        </div>
-
-         <!--Selling Point TWO-->
+         <!--ONE LARGE FLAG AND POINT-->
         <div class="flex flex-wrap flex-col-reverse sm:flex-row">
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <title> Pair Review </title>
@@ -381,7 +371,7 @@
               </svg>
             
           </div>
-          <div class="w-full sm:w-1/2 p-6 mt-6">
+          <div class="w-full sm:w-1 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
                 Cybersecurity is an organisation-wide effort
