--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -398,30 +398,9 @@
             </div>
           </div>
           </div>
-          <!--FIGURE OUT THE PADDING-->
-           
-          </div>
-          <div class="w-full sm:w-1/2 p-6 mt-6">
-            <div class="align-middle">
-              <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                A Digital Assistant In Your Pocket
-              </h3>
-              <p class="text-gray-600 mb-8">
-                Saw a funder in the news? Update the funder's profile conveniently, add a note on what you found, send a congratulatory message or assign a colleague to follow-up.
-                Meeting with a funder? Look through last-minute research to remind you of their personal details. <br> </br>
-                Built-in speech recognition software to dictate the notes as the meeting goes, so you can focus on the conversation.
-                After the meeting, capture the info while it is fresh in your mind. 
-                <br />
-                <br />
-                <!--insert text if you would like to leave a sentence with a URL link in between <a> (name of link) </a>-->
-
-                <a class="text-pink-500 underline" href="https://undraw.co/">  </a>
-
-
-              </p>
             </div>
           </div>
-          <!--END of Core Features-->
+          <!--END of ONE LARGE POINT-->
 
         </div>
       </div>
