--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -80,7 +80,7 @@
     <div class="pt-24">
       <div class="container px-12 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
-        <div class="flex flex-col w-full md:w-3/5 justify-center items-start text-center md:text-left">
+        <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="uppercase tracking-loose w-full">AVPN Digital Transformation Team</p>
           <h1 class="my-4 text-5xl font-bold leading-tight\">
             Cybersecurity
@@ -93,7 +93,7 @@
           </button>
         </div>
         <!--Right Col-->
-        <div class="w-full md:w-1/2 py-6 text-center">
+        <div class="w-large md:w-3/5 py-6 text-center">
 
           <!--FIRST IMAGE SVG BELOW-->
           <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" width="751.13137" height="669.03005" viewBox="0 0 751.13137 669.03005" xmlns:xlink="http://www.w3.org/1999/xlink">
