--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -93,7 +93,7 @@
           </button>
         </div>
         <!--Right Col-->
-        <div class="w-large md:w-3/5 py-6 text-center">
+        <div class="w-full md:w-3/5 py-6 text-center">
 
           <!--FIRST IMAGE SVG BELOW-->
           <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" width="751.13137" height="669.03005" viewBox="0 0 751.13137 669.03005" xmlns:xlink="http://www.w3.org/1999/xlink">
