--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -80,7 +80,7 @@
     <div class="pt-24">
       <div class="container px-12 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
-        <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
+        <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-right">
           <p class="uppercase tracking-loose w-full">AVPN Digital Transformation Team</p>
           <h1 class="my-4 text-5xl font-bold leading-tight\">
             Cybersecurity
@@ -92,7 +92,7 @@
             Sign Up
           </button>
         </div>
-        <!--Right Col-->
+        <!--Left Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
           
           <!--FIRST IMAGE SVG BELOW-->
