--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -79,7 +79,7 @@
     <!--Cybersecurity Triage and Implementation Services-->
     <div class="pt-24">
       <div class="container px-12 mx-auto flex flex-wrap flex-col md:flex-row items-center">
-        <!--Left Col-->
+        <!--Right Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-right">
           <p class="uppercase tracking-loose w-full">AVPN Digital Transformation Team</p>
           <h1 class="my-4 text-5xl font-bold leading-tight\">
