--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -379,7 +379,7 @@
                 Cybersecurity is an organisation-wide effort
               </h3>
               <p class="text-gray-600 mb-8">
-                We will work with you to tailor-make a solution.
+                We will work with you to tailor-make a solution for easy implementation in staff's digital hygiene habits.
                 <br />
                 <br />
                 <!--insert text if you would like to leave a sentence with a URL link in between <a> (name of link) </a>-->
@@ -426,19 +426,19 @@
                     <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                1.Best Practices
+                1.Technology Triage
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
-                - Glean from AVPN's 10-years experiences in impact investments <br> </br>
-                - Access AVPN Academy for practical handles to build strong relationships with donors <br> </br>
+                - Understandy our organisation's current workflow, device management and assess in terms of Information Classification, Risks and Safeguards <br> </br>
+                - Severity score, Hierachy levels, and Relationship-Mapping across tools and devices <br> </br>
                 </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
               <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-1 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                <!--INSERT NAME OF BUTTON HERE, JUST WRITE THE TEXT. IT IS CURRENTLY REDACTED with 4 space bar. TO ACTIVATE Button Change the above 'py-1' into 'py-4'-->
+                Vote <!--Insert Button Text here-->
               </button>
             </div>
           </div>
@@ -450,17 +450,13 @@
                 <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                2. Summary of Funder's Engagement Levels
+                2. Vulnerability Assessment
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
-                - Highlight the top <b>10</b> new funders to call <br>
-                  (for each country representative / market directors)<br> </br>
-                - Surface <b>10</b> existing funders with the least engagement (with renewal due in 3 months) and reach out proactively on how to value-add to their philanthropy goals <br> </br>
-                - Summary of the funder's past giving to the non-profit <br> </br>
-                - Reported philanthropic activity based on public information <br>
-                </br>
-                - Map out funder's development goals and communication history with logged emails <br> </br>
+                - <br> Software and Hardware Risk Assessment </br>
+                - <br> Compatibility and Conflicts from using cross-platforms or across devices </br> 
+                - <br> Inconsistent Implementation, undefined behaviour, overexposure, and obselete tools></br>
 
               </p>
             </a>
