--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -456,7 +456,7 @@
                 <br>
                 - <br> Software and Hardware Risk Assessment </br>
                 - <br> Compatibility and Conflicts from using cross-platforms or across devices </br> 
-                - <br> Inconsistent Implementation, undefined behaviour, overexposure, and obselete tools></br>
+                - <br> Inconsistent implementation, undefined behaviour, overexposure, and obselete tools </br>
 
               </p>
             </a>
@@ -476,13 +476,14 @@
                 <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                3. Marketing Automation and Personalised Communications
+                3. Recommendations and Migrations
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 <br>
-                - Build and deploy outreach emails using our built-in templates <br> </br>
-                - With analytics to monitor the email's performance (eg. YAMM) <br> </br>
-                - Design, edit and deploy mail for renewals, solicitations and acknowledgements in batches for quick fulfillment <br> </br>
+                - Recommended migration to target weaknesses </br>
+                - <br> - Identify Risk and Weakness according to three levels (staff-interface, intermediary and web-facing) </br>
+                - <br> - Discussion with across-teams and seniority on the likelihood to implement these recommended tools </br>
+                - <br> - Design of organisation-wide implementation plan </br>                
                 <div class="w-full font-bold text-xl text-gray-800 px-6">
                   
                 </div>
@@ -510,7 +511,7 @@
                     <br> </br>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                4. Interactive Dashboard
+                4. Deployment
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 </br>
