--- a/Cybersecurity01.html
+++ b/Cybersecurity01.html
@@ -21,6 +21,7 @@
       }
     </style>
   </head>
+
   <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <!--Nav-->
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
@@ -82,7 +83,7 @@
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="uppercase tracking-loose w-full">AVPN Digital Transformation Team</p>
-          <h1 class="my-4 text-5xl font-bold leading-tight\">
+          <h1 class="my-4 text-5xl font-bold leading-normal">
             Cybersecurity
           </h1>
           <p class="leading-normal text-1xl mb-8">
@@ -187,7 +188,7 @@
     <section class="bg-white border-b py-8">
       <div class="container max-w-5xl mx-auto m-8">
         <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          Core Features
+          Our Approach
         </h1>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
